[project]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "NickChecan",email = "nicholas.checan@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.4,<0.4.0)",
    "langgraph (>=0.2.70,<0.3.0)",
    "langchain-community (>=0.3.17,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
